CSS/index_styles.css
/* ... */
@keyframes collapse-into-close-button {
    0% {
        width: 93vw;
        height: 94vh;
        height: 94svh;
    }
    65% {
        opacity: 1;
        width: 70px;
        height: 66px;
    }
    75% {
        opacity: 1;
        width: 70px;
        height: 66px;
    }
    100% {
        opacity: 0;
        width: 70px;
        height: 66px;
    }
}

@media screen and (max-width: 700px) {
    .card-expanded h3 {
        font-size: 2.5rem;
    }

    .card-expanded .header {
        padding: 1.5rem;
    }

    .card-expanded .header .top-image {
        height: 70px;
    }

    .card-expanded .subtitle {
        font-size: 1rem;
    }

    #tdsb-card-expanded .header img {
        height: 40px;
    }

    #vividseats-card-expanded .header img {
        height: 70px;
    }
}

@media screen and (max-width: 500px) {
    .card-expanded h3 {
        font-size: 2rem;
    }

    .card-expanded .header {
        margin-top: 2rem;
    }

    .card-expanded .header .top-image {
        height: 50px;
        margin-right: 0.5rem;
    }

    .close-button {
        height: 40px;
        width: 40px;
    }

    .close-button div {
        background-color: var(--gold);
        height: 3px;
        width: 40px;
        position: relative;
    }

    #tdsb-card-expanded .header img {
        height: 30px;
        margin-right: 0.75rem;
    }

    #vividseats-card-expanded .header img {
        height: 60px;
    }

    .card-expanded .content {
        margin: 0 1rem;
    }

    @keyframes expand-from-close-button {
        0% {
            opacity: 0;
            width: 60px;
            height: 60px;
        }
        25% {
            opacity: 1;
            width: 60px;
            height: 60px;
        }
        100% {
            width: 93vw;
            height: 94vh;
            height: 94svh;
        }
    }

    @keyframes collapse-into-close-button {
        0% {
            width: 93vw;
            height: 94vh;
            height: 94svh;
        }
        65% {
            opacity: 1;
            width: 60px;
            height: 60px;
        }
        75% {
            opacity: 1;
            width: 60px;
            height: 60px;
        }
        100% {
            opacity: 0;
            width: 60px;
            height: 60px;
        }
    }
}

#first-header-code-img {
    width: 100px;
    height: 80px;
}

.img-text-row img {
    width: auto;
    height: 100px;
    padding-right: 1vw;
}

.img-text-row ul {
    margin: 0 0 25px 0;
}

.img-text-row p,
.img-text-row img {
    margin-top: 0;
    margin-bottom: 4vh;
}

.img-text-row img#tdsb-logo {
    height: 2.5vw;
    min-height: 35px;
    width: auto;
    padding-right: 1.4vw;
}

.img-text-row img#guitar-logo {
    height: 120px;
    width: auto;
    padding-left: 1.2vw;
}

.img-text-row img#hockey-logo {
    height: 90px;
    width: auto;
    padding-left: 0.5vw;
}

.img-text-row img#frisbee-logo {
    height: 75px;
}

.row-title {
    position: absolute;
    top: 0;
    margin: 0;
    padding-left: 10%;
}

.row-img {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
}

.proj {
    position: absolute;
    width: 10px;
    height: 10px;
    background-color: white;
}

#third-header-body {
    width: 92vw;
    /* border-right: 2px solid rgb(200, 200, 200);
    border-left: 2px solid rgb(200, 200, 200); */
    animation-name: fade-in-translate;
    animation-duration: 1s;
    animation-delay: 1s;
    animation-fill-mode: both;
    margin-top: 22vh;
}

#third-header-body-headers > h3 {
    font-size: 60px;
    cursor: pointer;
    color: var(--blue);
}

#third-header-body-headers > h3:hover {
    color: var(--blue);
}

#third-header-body-headers > h3:not(.active-header) {
    color: var(--light-blue);
}

h3.active-header {
    opacity: 1;
}

#third-header-body-headers .left {
    position: absolute;
    left: 0;
    transition: left 1s ease, color 1s ease, opacity 1s ease;
}

#third-header-body-headers .first-header.middle {
    position: absolute;
    left: 20rem;
    transition: left 1s ease, color 1s ease;
}

#third-header-body-headers .second-header.middle {
    position: absolute;
    left: 20rem;
    transition: left 1s ease, color 1s ease;
}

#third-header-body-headers .third-header.middle {
    position: absolute;
    left: 20rem;
    transition: left 1s ease, color 1s ease;
}

#third-header-body-headers .first-header.right {
    position: absolute;
    left: 80%;
    transition: left 1s ease, color 1s ease;
}

#third-header-body-headers .second-header.right {
    position: absolute;
    left: 76%;
    transition: left 1s ease, color 1s ease;
}

#third-header-body-headers .third-header.right {
    position: absolute;
    left: 78%;
    transition: left 1s ease, color 1s ease;
}

@keyframes well-open {
    0% {
        height: 0;
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 5rem;
    }
    100% {
        height: 60vh;
    }
}

@keyframes well-close {
    0% {
        height: 60vh;
    }
    100% {
        height: 0;
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 5rem;
    }
}

.well-close {
    animation-name: well-close;
    animation-duration: 1s;
    animation-fill-mode: both;
}

.well-open {
    animation-name: well-open;
    animation-duration: 1s;
    animation-fill-mode: both;
}

.third-header-body {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    margin-top: 5rem;
    overflow-y: auto;
    height: 62vh;
    border-bottom: 1px solid var(--default-text);
    padding-bottom: 2rem;
    padding-left: 1rem;
    padding-right: 0.5rem;
    margin-left: -1rem;
}
/* ... */

